--- a/html_css/defiairbnb/styles.css
+++ b/html_css/defiairbnb/styles.css
@@ -21,6 +21,10 @@ body {
   padding: 10px;
   font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
+.nav li:hover {
+  opacity: 0.5;
+
+}
 .nav span {
   border:  2px solid white;
   padding: 5px;
@@ -41,6 +45,7 @@ margin-top: -100px;
 width: 100%;
 max-height: 750px;
 }
+
 .textimg {
   position: absolute;
   text-align: center;
@@ -58,10 +63,83 @@ max-height: 750px;
 }
 .search {
   position: absolute;
-  display: block;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.5);
   width: 100%;
   height: 120px;
-  opacity: 0.5;
   margin-top: -122px;
+  display:inline-block;
+
+}
+.searchform {
+  line-height: 120px;
+  position: relative;
+  box-sizing: inherit;
+  margin-left: 25%;
+
+
+
+}
+input{
+  height: 30px;
+  border-radius: 5px;
+  color: black;
+
+}
+select {
+  height: 35px;
+  background-color: white;
+  text-decoration: none;
+  border-radius: 5px;
+
+}
+button {
+  height: 34px;
+  position: relative;
+  width: 200px;
+  margin-top: 50px;
+  background-color: #ff1a1a;
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  font-size: 18px;
+}
+.article1 {
+  padding: 5% 20% 5% 20%;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+}
+.textarticle1{
+  text-align: left;
+  background-color: white;
+  padding: 5% 5% 5% 5%;
+
+
+}
+.textarticle1 h3 , .textarticle1 p{
+  text-align: left;
+  width: 300px;
+  font-family: sans-serif;
+  font-size: 125%;
+
+}
+.article1 img{
+
+
+}
+.textarticle1 button {
+  width: 250px;
+  margin-top: 50px;
+  margin-left: 32px;
+  background-color:  #237187;
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  font-size: 18px;
+
+}
+.textarticle1 button:hover {
+  background-color: #388EA7;
 }
