--- a/html_css/designsite/styles.css
+++ b/html_css/designsite/styles.css
@@ -34,26 +34,52 @@ li img{
   -ms-transform: scale(1.2);
   transform: scale(1.2);
 }
-ul #logo{
+ #logo{
   padding-bottom: 450px;
   width: 250%;
   padding-left: 30px;
-  padding-top: 40px;
+  padding-top: 60px;
+}
+#logo img:hover {
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+  -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.2);
 }
 .topbar li {
   display: inline;
   padding: 50px;
 }
+
 .topbar a{
   text-decoration: none;
-  transition: all 0.1s ease-in-out;
+  position: relative;
   color: #262626;
   padding-bottom:10px;
-;
 }
 .topbar a:hover {
-  border-bottom: 2px solid black;
-  border-color: #262626;
+  color:#262626;
+
+}
+.topbar li > a:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color:#262626 ;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+.topbar li > a:hover:before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
 }
 .topbar{
   margin-left: 183px;
@@ -141,7 +167,7 @@ h4 {
   animation-iteration-count: 1;
 }
 .article1  {
-  margin: 20% 12% 10% 23%;
+  margin: 12% 12% 10% 20%;
 
 }
 .article1 img {
@@ -157,7 +183,6 @@ h4 {
 }
 .article1 h1 {
   padding-bottom: 20px;
-  font-family: "Roboto";
   font-weight: lighter;
 }
 .swipe{
@@ -171,7 +196,6 @@ h4 {
 .swipetitre h1 {
   padding-bottom: 20px;
   padding-left: 23%;
-  font-family: "Roboto";
   font-weight: 100;
 }
 .swipetitre:hover {
@@ -250,7 +274,6 @@ h4 {
   margin: 40% 12% 2% 23%;
   transition: all 0.2s ease-in-out;
   z-index: -10;
-  font-family: "Roboto";
   font-weight: lighter;
   -webkit-animation: move 5s ease  infinite alternate;;
   animation: move 5s ease  infinite alternate;
@@ -265,7 +288,7 @@ h4 {
 
 }
 .paraloco h1 {
-  font-family: "Roboto";
+  font-family: 'Lato';
   font-weight: lighter;
   padding: 0 0 5% 0;
 
@@ -283,4 +306,24 @@ h4 {
 }
 .paraloco img {
   margin-bottom: 60px;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+  transition: all 0.3s ease-in-out;
+
+}
+.paraloco img:hover {
+box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+transform: translateX(-5px);
+}
+.paraexpli img {
+  margin-bottom: 60px;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+  transition: all 0.3s ease-in-out;
+
+}
+.paraexpli img:hover {
+box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+transform: translateX(-5px);
+}
+ h1 {
+  font-family: 'Lato';
 }
