--- a/note/css.css
+++ b/note/css.css
@@ -13,4 +13,7 @@ legend {
 h1  {
 outline: none
 }
-/***********************************************/
+/*Enlever le style(point) d'une li*/
+li {
+  list-style: none;
+}
