--- a/javascript/october_2016/memo2.0/memo.css
+++ b/javascript/october_2016/memo2.0/memo.css
@@ -7,15 +7,14 @@ body {
   margin: 5%;
 }
 #board {
-  width: 99%;
+  width: 100%;
+  height: 500px;
   display: inline-block;
   text-align: center;
 }
 #memo {
-  width: 30%;
   margin-left: auto;
   margin-right: auto;
-
 }
 
 .card, .front, .back {
@@ -26,6 +25,7 @@ body {
 
 /* animation, vitesse  */
 .card {
+  margin: 2%;
 	transition: 0.6s;
 	transform-style: preserve-3d;
 	position: relative;
