changement css memo centrage etc

--- a/javascript/october_2016/memo2.0/memo.css
+++ b/javascript/october_2016/memo2.0/memo.css
@@ -49,3 +49,10 @@ body {
 	transform: rotateY(180deg);
 
 }
+#memoCard {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 500px;
+    margin: auto;
+    justify-content: center;
+}
